--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <thead>
                         <tr>
                           <th class="w-50" scope="col">Titolo</th>
-                          <th scope="col">Data prestito</th>
+                          <th class="d-none d-md-table-cell" scope="col">Data prestito</th>
                           <th scope="col">Stato</th>
                           <th scope="col">Azioni</th>
                         </tr>
@@ -75,7 +75,7 @@
                       <tbody>
                         <tr>
                             <td class="w-50">I pilastri della terra</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -84,7 +84,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">I promessi sposi</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -93,7 +93,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il signore degli anelli</td>
-                            <td>18/10/2023</td>
+                            <td class="d-none d-md-table-cell">18/10/2023</td>
                             <td><span class="badge bg-warning text-white">In prestito</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -102,7 +102,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il signore degli anelli</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -111,7 +111,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Harry Potter e la pietra filosofale</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -120,7 +120,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il codice Da Vinci</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-danger"> Non disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -129,7 +129,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Shining</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -138,7 +138,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">La divina commedia</td>
-                            <td>21/09/2023</td>
+                            <td class="d-none d-md-table-cell">21/09/2023</td>
                             <td><span class="badge bg-warning text-white">In prestito</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -147,7 +147,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il trono di spade</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -156,7 +156,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il mondo di Sofia</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-danger">Non disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -165,7 +165,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Le cronache di Narnia: il leone, la strega e l'armadio</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -174,7 +174,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">Il piccolo principe</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
@@ -183,7 +183,7 @@
                         </tr>
                         <tr>
                             <td class="w-50">La storia infinita</td>
-                            <td>-</td>
+                            <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td>
                                 <button class=" btn btm-sm btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
